# metele-api

./: .gitignore  404.html  Dockerfile  LICENSE  Makefile  README.md  dev-requirements.txt  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  env.example  index.html  local.env.example  metele.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: customtypes.py  main.py  settings.py  typehints.py
app/api/: urls.py
app/api/routes/: hello.py
app/services/: __init__.py  http.py
dockerfiles/dev/: Dockerfile
docs/: mkdocs.yml
docs/docs/: endpoints.md  index.md  install.md  quickstart.md  services.md  settings.md
quickstart/: index.html
scripts/: install.sh  run-in-local.sh  run-ipython.sh
scripts/devel/: install.sh  localenv.sh
scripts/files/: dev.dockerfile  docker-compose.sample.yml  pyproject.sample.toml
search/: search_index.json
services/: index.html
