[tool.poetry]
name = "faster-fastapi"
version = "0.3.14"
description = "An opinionated FastAPI template"
authors = ["Agustin Bacigalup <agustinbv@gmail.com>", "Emiliano Dalla Verde Marcozzi <6564766d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
openapi = "^1.1.0"
httpx = "^0.24.0"
loguru = "^0.7.0"
hypercorn = "^0.14.3"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
result = "^0.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
pre-commit = "^3.3.1"
ruff = "^0.0.267"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
