[project]
name = "metele-api"
version = "0.1.0"
description = "MeteleAPI wraps FastAPI for when you need to go faster"
authors = [
    { name = "Emiliano Dalla Verde Marcozzi", email = "edvm@fedoraproject.org" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]